--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -1,4 +1,4 @@
-$primary: #73c885;
-$primary-hover: #3b7447;
-$secondary: #d0ffbb;
-$dark: #000;
+$primary: #90B77D;
+$primary-hover: #42855B;
+$secondary: #D2D79F;
+$dark: #483838;
