--- a/resources/views/agents/certificate-requests.ejs
+++ b/resources/views/agents/certificate-requests.ejs
@@ -10,6 +10,7 @@
                     <th class="px-4 py-2 text-left">Worker Name</th>
                     <th class="px-4 py-2 text-left">Worker No</th>
                     <th class="px-4 py-2 text-left">Status</th>
+                    <th class="px-4 py-2 text-left">Requested At</th>
                 </tr>
             </thead>
             <tbody id="certificateTableBody">
