--- a/resources/views/citizens/request-certificate.ejs
+++ b/resources/views/citizens/request-certificate.ejs
@@ -13,7 +13,7 @@
                             <div class="col-2">
                                 <div class="input-group">
                                     <label class="label required">Society Name</label>
-                                    <input class="input--style-4" type="text" name="SocietyName" value="<%=messages.SocietyName%>" placeholder="Enter Owner Name" required>
+                                    <input class="input--style-4" type="text" name="SocietyName" value="<%=messages.SocietyName%>" placeholder="Enter Society Name" required>
                                 </div>
                             </div>
                             <div class="col-2">
