--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -13,10 +13,13 @@
         <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
         <link href="vendor/select2/select2.min.css" rel="stylesheet" media="all">
         <link href="vendor/datepicker/daterangepicker.css" rel="stylesheet" media="all">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> 
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <link href= "https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
         <link rel="stylesheet" href="/css/app.css">
-</head>
-<body>
+      </head>
+  <body>
     <nav class="container mx-auto flex items-center justify-between py-4">
         <div class="flex">
             <img src="/images/smc-logo.png" alt="logo" class="h-20 w-20">
@@ -26,6 +29,7 @@
           <ul class="flex item-center">
             <li class="ml-6 text-xl"><a href="#">Home</a></li>
             <li class="ml-6 text-xl"><a href="#">Our mission</a></li>
+            <li class="ml-6 text-xl"><a href="#third-part">Article</a></li>
             <li class="ml-6 text-xl"><a href="#">Contact</a></li>
             <% if(user) { %>
               <li class="ml-6 text-xl">
@@ -41,6 +45,29 @@
     </nav>
     
     <%- body %>
+    <!-- Footer -->
+
+    <div>
+      <footer id="footer">
+    
+        <a class="btn btn-primary btn-lg btn-floating footer-link-1" style="background-color: #367E18;" href="#!" role="button">
+          <i class="fab fa-instagram"></i>   </a>
+        
+        <a class="btn btn-primary btn-lg btn-floating footer-link-2" style="background-color: #367E18;" href="#!" role="button" >
+          <i class="fab fa-facebook"></i>   </a>
+          
+        <a class="btn btn-primary btn-lg btn-floating footer-link-3" style="background-color: #367E18;" href="#!" role="button" >
+          <i class="fab fa-twitter"></i>   </a>
+          
+        
+    
+        <p style="text-align: center; padding-top: 50px; color: white;">© Copyright Plastic free Surat</p>
+    
+      </footer>
+    </div>
+
+
+
     <script src="/js/app.js"></script>
-</body>
+  </body>
 </html>
